--- a/css_basic/index.html
+++ b/css_basic/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
     <link href="base.css" rel="stylesheet">
 <link href="styles.css" rel="stylesheet">
-
-  <meta charset="UTF-8">
   <title>Ntombi Breakfast - Portfolio</title>
 </head>
-<body>
+<body    class="works_on_smartphone"
+>
   <h1>Welcome to My Portfolio</h1>
   <p>This is my personal space on the web where I showcase my skills and projects.</p>
   <article class="project">
