--- a/css_basic/index.html
+++ b/css_basic/index.html
@@ -1,50 +1,78 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+  <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <link href="base.css" rel="stylesheet">
-<link href="styles.css" rel="stylesheet">
   <title>Ntombi Breakfast - Portfolio</title>
+  <link rel="stylesheet" href="base.css">
+  <link rel="stylesheet" href="styles.css">
 </head>
-<body    class="works_on_smartphone"
->
-  <h1>Welcome to My Portfolio</h1>
-  <p>This is my personal space on the web where I showcase my skills and projects.</p>
-  <article class="project">
-  <h3>Portfolio Website</h3>
-  <p>A simple personal portfolio showcasing my projects, built using only HTML and CSS.</p>
+<body class="works_on_smartphone">
+  <header>
+    <nav>
+      <ul>
+        <li class="logo">&#128187;</li> <!-- 💻 Coding Logo -->
+        <li><a href="#">Home</a></li>
+        <li><a href="#">Projects</a></li>
+        <li><a href="#">About</a></li>
+      </ul>
+    </nav>
+  </header>
 
-  <table>
-    <thead>
-      <tr>
-        <th>Name</th>
-        <th>Age</th>
-        <th>Country</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr><td>John</td><td>25</td><td>USA</td></tr>
-      <tr><td>Emily</td><td>28</td><td>Canada</td></tr>
-      <tr><td>Michael</td><td>32</td><td>Australia</td></tr>
-      <tr><td>Sophia</td><td>21</td><td>UK</td></tr>
-    </tbody>
-  </table>
-</article>
+  <main>
+    <article>
+      <h1>Welcome to My Portfolio</h1>
+      <p>This is my personal space on the web where I showcase my skills and projects.</p>
 
+      <section class="project">
+        <h3>Portfolio Website</h3>
+        <p>A simple personal portfolio showcasing my projects, built using only HTML and CSS.</p>
 
-  <h2>About Me</h2>
-  <p>I am an aspiring web developer learning front-end technologies like HTML, CSS, and JavaScript.</p>
+        <table>
+          <thead>
+            <tr>
+              <th>Name</th>
+              <th>Age</th>
+              <th>Country</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr><td>John</td><td>25</td><td>USA</td></tr>
+            <tr><td>Emily</td><td>28</td><td>Canada</td></tr>
+            <tr><td>Michael</td><td>32</td><td>Australia</td></tr>
+            <tr><td>Sophia</td><td>21</td><td>UK</td></tr>
+          </tbody>
+        </table>
+      </section>
 
-  <h3>My Goals</h3>
-  <p>My main goal is to create user-friendly and visually appealing web pages.</p>
+      <section>
+        <h2>About Me</h2>
+        <p>I am an aspiring web developer learning front-end technologies like HTML, CSS, and JavaScript.</p>
+        <h3>My Goals</h3>
+        <p>My main goal is to create user-friendly and visually appealing web pages.</p>
+        <p>Outside of coding, I enjoy problem-solving and working on creative designs.</p>
+      </section>
 
-  <p>Outside of coding, I enjoy problem-solving and working on creative designs.</p>
+      <section>
+        <h2>Click the Image Below</h2>
+        <a href="https://www.alxafrica.com/" target="_blank">
+          <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="ALX Logo" width="200">
+        </a>
+      </section>
+    </article>
 
-  <h2>Click the Image Below</h2>
-  <a href="https://www.alxafrica.com/" target="_blank">
-    <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="ALX Logo" width="200">
-  </a>
+    <aside>
+      <h3>Quick Links</h3>
+      <ul>
+        <li><a href="#">My Resume</a></li>
+        <li><a href="#">GitHub</a></li>
+        <li><a href="#">LinkedIn</a></li>
+      </ul>
+    </aside>
+  </main>
+
+  <footer>
+    <p>&copy; 2025 Ntombi Breakfast. All rights reserved.</p>
+  </footer>
 </body>
 </html>
